--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
-
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+<!--        <item name="tint">#3E58FF</item>-->
     </style>
 
     <style name="BottomNavigationStyle">
@@ -8,10 +10,11 @@
     </style>
 
     <style name="BottomNavigationTheme">
+        <item name="android:textSize">14sp</item>
         <item name="colorPrimary">@color/black</item>
         <item name="colorOnSurface">@color/black</item>
+<!--        <item name="tint">@color/black</item>-->
         <item name="itemIconTint">@drawable/navigation_color</item>
         <item name="itemTextColor">@drawable/navigation_color</item>
     </style>
-
 </resources>
