--- a/app/src/main/res/drawable/underline_background.xml
+++ b/app/src/main/res/drawable/underline_background.xml
@@ -5,7 +5,7 @@
             <item android:gravity="bottom" android:left="10dp" android:right="10dp">
                 <shape>
                     <size android:height="3dp" />
-                    <solid android:color="@color/gray" />
+                    <solid android:color="@color/accent" />
                 </shape>
             </item>
         </layer-list>
