--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -40,13 +40,16 @@
             tools:ignore="VisualLintButtonSize" />
     </RadioGroup>
 
-    <TextView
-        android:id="@+id/text_view"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/list_type_select"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="NestedScrolling" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
