--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/home_item"
         android:title="@string/home_title"
-        android:icon="@drawable/home_icon"/>
+        android:icon="@drawable/icon_home"/>
     <item
         android:id="@+id/add_new_item"
         android:title="@string/add_new_title"
-        android:icon="@drawable/add_new_icon"/>
+        android:icon="@drawable/icon_add_new"/>
     <item
         android:id="@+id/list_item"
         android:title="@string/list_title"
-        android:icon="@drawable/list_icon"/>
+        android:icon="@drawable/icon_list"/>
 </menu>
