--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,19 +1,23 @@
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
-<!--        <item name="tint">#3E58FF</item>-->
+        <item name="actionBarTheme">@style/AppTheme.ActionBar</item>
+    </style>
+    <style name="AppTheme.ActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="colorOnBackground">@color/accent</item>
+
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/accent</item>
     </style>
 
     <style name="BottomNavigationStyle">
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/accent</item>
     </style>
-
     <style name="BottomNavigationTheme">
         <item name="android:textSize">14sp</item>
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorOnSurface">@color/black</item>
-<!--        <item name="tint">@color/black</item>-->
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnSurface">@color/white</item>
         <item name="itemIconTint">@drawable/navigation_color</item>
         <item name="itemTextColor">@drawable/navigation_color</item>
     </style>
