--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,18 @@
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
-        <item name="actionBarTheme">@style/AppTheme.ActionBar</item>
+<!--        <item name="actionBarTheme">@style/AppTheme.ActionBar</item>-->
     </style>
     <style name="AppTheme.ActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="colorOnBackground">@color/accent</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="colorPrimary">@color/accent</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/accent</item>
+    </style>
+    <style name="AppTheme.ActionBar.Button">
+        <item name="tint">@drawable/toolbar_button_color</item>
+        <item name="backgroundColor">@color/transparent</item>
     </style>
     <style name="BottomNavigationStyle">
         <item name="android:background">@color/accent</item>
@@ -16,7 +21,7 @@
         <item name="android:textSize">14sp</item>
         <item name="colorPrimary">@color/white</item>
         <item name="colorOnSurface">@color/white</item>
-        <item name="itemIconTint">@drawable/navigation_color</item>
-        <item name="itemTextColor">@drawable/navigation_color</item>
+        <item name="itemIconTint">@drawable/navigation_item_color</item>
+        <item name="itemTextColor">@drawable/navigation_item_color</item>
     </style>
 </resources>
