--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
             android:layout_marginStart="14dp"/>
 
         <ListView
-            android:id="@+id/events_list_view"
+            android:id="@+id/event_notes_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -44,12 +44,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/events_list_view"
+            app:layout_constraintTop_toBottomOf="@+id/event_notes_list_view"
             app:layout_constraintVertical_bias="0.04"
             android:layout_marginStart="14dp"/>
 
         <ListView
-            android:id="@+id/notes_list_view"
+            android:id="@+id/text_notes_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
