--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment"
     android:fillViewport="true">
@@ -14,7 +14,7 @@
             android:id="@+id/events_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/events_home_title"
+            android:text="@string/event_notes_home_title"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -24,21 +24,30 @@
             app:layout_constraintVertical_bias="0.02"
             android:layout_marginStart="14dp"/>
 
+        <TextView
+            android:layout_marginTop="10dp"
+            android:id="@+id/no_pinned_event_notes_info"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:text="@string/no_pinned_event_notes_info"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/events_title" />
+
         <ListView
             android:id="@+id/event_notes_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/events_title"
-            tools:ignore="NestedScrolling"
-            android:layout_marginBottom="10dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/no_pinned_event_notes_info"
+            tools:ignore="NestedScrolling" />
 
         <TextView
             android:id="@+id/notes_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/notes_home_title"
+            android:text="@string/text_notes_home_title"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,13 +57,24 @@
             app:layout_constraintVertical_bias="0.04"
             android:layout_marginStart="14dp"/>
 
+        <TextView
+            android:layout_marginTop="10dp"
+            android:id="@+id/no_pinned_text_notes_info"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:text="@string/no_pinned_text_notes_info"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notes_title" />
+
         <ListView
+            android:layout_height="wrap_content"
             android:id="@+id/text_notes_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/notes_title"
+            app:layout_constraintTop_toBottomOf="@+id/no_pinned_text_notes_info"
             tools:ignore="NestedScrolling"
             android:layout_marginBottom="10dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
